--- a/intro.html
+++ b/intro.html
@@ -85,6 +85,34 @@
     cursor:pointer;
     box-shadow:0 4px 14px rgba(0,0,0,0.35);
   }
+/* ================= RESPONSIVE MOBILE ================= */
+@media screen and (max-width: 768px) {
+
+  /* Container sách co dãn theo màn hình nhỏ */
+  .book-container {
+    width: 90vw;
+    height: 60vh;
+  }
+
+  /* Page ảnh co dãn */
+  .page img {
+    width: 100%;
+    height: auto;
+  }
+
+  /* Nút Vào trang chính */
+  #btnEnter {
+    width: 80%;
+    font-size: 1.2rem;
+    padding: 12px 20px;
+  }
+
+  /* Padding top body */
+  body {
+    padding-top: 20px;
+  }
+}
+
 </style>
 </head>
 
