--- a/intro.html
+++ b/intro.html
@@ -6,113 +6,18 @@
 <title>Intro Book</title>
 
 <style>
-  html,body {
-    height:100%;
-    margin:0;
-  }
+html,body { height:100%; margin:0; }
+body { background:url('Gate.png') center/cover no-repeat; display:flex; flex-direction:column; align-items:center; padding-top:40px; font-family:serif; overflow:hidden; }
 
-  body {
-    background:url('gate.png') center/cover no-repeat;
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    padding-top:40px;
-    font-family:serif;
-    overflow:hidden;
-  }
+.book-container { width:50vw; height:50vh; position:absolute; left:50%; transform: translateX(-50%); bottom:0; perspective:2000px; opacity:0; transition: opacity 600ms ease; }
+.page { width:100%; height:100%; position:absolute; top:0; left:0; display:none; }
+.page img { width:100%; height:100%; object-fit:contain; }
+.page.show { display:flex; justify-content:center; align-items:center; }
+@keyframes flipY { from { transform: rotateY(0deg); } to { transform: rotateY(180deg); } }
+.flip { animation: flipY 800ms forwards ease-in; }
 
-  /* BOOK CONTAINER */
-.book-container {
-    width:50vw;          /* thu nhỏ 50% ngang */
-    height:50vh;         /* thu nhỏ 50% dọc */
-    position:absolute;   /* QUAN TRỌNG – để bottom:0 có tác dụng */
-    left:50%;            /* canh giữa ngang */
-    transform: translateX(-50%); 
-    bottom:0;            /* kéo sát xuống đáy */
-    perspective:2000px;
-    opacity:0;
-    transition: opacity 600ms ease;
-}
-
-  /* PAGE STYLE */
-  .page {
-    width:100%;
-    height:100%;
-    position:absolute;
-    top:0;
-    left:0;
-    display:none;
-  }
-
-  .page img {
-    width:100%;
-    height:100%;
-    object-fit:contain;  /* không cắt ảnh */
-  }
-
-  /* PAGE VISIBLE */
-  .page.show {
-    display:flex;
-    justify-content:center;
-    align-items:center;
-  }
-
-  /* ANIMATION: FLIP */
-  @keyframes flipY {
-    from { transform: rotateY(0deg); }
-    to   { transform: rotateY(180deg); }
-  }
-
-  .flip {
-    animation: flipY 800ms forwards ease-in;
-  }
-
-  /* BUTTON OUTSIDE */
-  #enterWrapper {
-    margin-top:20px;
-    display:none;
-    text-align:center;
-    width:100%;
-  }
-
-  #btnEnter {
-    padding:14px 26px;
-    font-size:20px;
-    background:#8b6e46;
-    color:white;
-    border:none;
-    border-radius:10px;
-    cursor:pointer;
-    box-shadow:0 4px 14px rgba(0,0,0,0.35);
-  }
-/* ================= RESPONSIVE MOBILE ================= */
-@media screen and (max-width: 768px) {
-
-  /* Container sách co dãn theo màn hình nhỏ */
-  .book-container {
-    width: 90vw;
-    height: 60vh;
-  }
-
-  /* Page ảnh co dãn */
-  .page img {
-    width: 100%;
-    height: auto;
-  }
-
-  /* Nút Vào trang chính */
-  #btnEnter {
-    width: 80%;
-    font-size: 1.2rem;
-    padding: 12px 20px;
-  }
-
-  /* Padding top body */
-  body {
-    padding-top: 20px;
-  }
-}
-
+#enterWrapper { margin-top:20px; display:none; text-align:center; width:100%; }
+#btnEnter { padding:14px 26px; font-size:20px; background:#8b6e46; color:white; border:none; border-radius:10px; cursor:pointer; box-shadow:0 4px 14px rgba(0,0,0,0.35); }
 </style>
 </head>
 
@@ -120,94 +25,41 @@
 
 <audio id="audioWarm" src="warm.mp3"></audio>
 
-<!-- BOOK AREA -->
 <div class="book-container" id="bookContainer">
-  <div class="page" id="page1"><img src="page1.png" /></div>
-  <div class="page" id="page2"><img src="page2.png" /></div>
-  <div class="page" id="page3"><img src="page3.png" /></div>
-  <div class="page" id="page4"><img src="page4.png" /></div>
-  <div class="page" id="page5"><img src="page5.png" /></div>
-  <div class="page" id="page6"><img src="page6.png" /></div>
-  <div class="page" id="page7"><img src="page7.png" /></div>
-  <div class="page" id="page8"><img src="page8.png" /></div>
+  <div class="page" id="page1"><img src="assets/images/page1.png" /></div>
+  <div class="page" id="page2"><img src="assets/images/page2.png" /></div>
+  <div class="page" id="page3"><img src="assets/images/page3.png" /></div>
+  <div class="page" id="page4"><img src="assets/images/page4.png" /></div>
+  <div class="page" id="page5"><img src="assets/images/page5.png" /></div>
+  <div class="page" id="page6"><img src="assets/images/page6.png" /></div>
+  <div class="page" id="page7"><img src="assets/images/page7.png" /></div>
+  <div class="page" id="page8"><img src="assets/images/page8.png" /></div>
 </div>
 
-<!-- BUTTON OUTSIDE -->
 <div id="enterWrapper">
   <button id="btnEnter" onclick="location.href='index.html'">Vào trang chính</button>
 </div>
 
 <script>
 (function(){
-
-  const audio = document.getElementById("audioWarm");
-  audio.volume = 0.6;
-  audio.play().catch(()=>{});
-
+  const audio = document.getElementById("audioWarm"); audio.volume=0.6; audio.play().catch(()=>{});
   const book = document.getElementById("bookContainer");
-
-  const pages = [
-    page1, page2, page3, page4, page5, page6, page7, page8
-  ];
-
-  const gateDelay  = 2500;   // 2,5s để hiện gate
-  const coverDelay = 5000;  // 5s cho trang bìa
-  const pageDelay  = 5000;  // 5s mỗi trang
-  const flipTime   = 800;    // thời gian lật trang
-
-  function sleep(ms){ return new Promise(res => setTimeout(res, ms)); }
-
-  function showPage(p){
-    p.classList.add("show");
-    p.classList.remove("flip");
-  }
-
-  function hidePage(p){
-    p.classList.remove("show");
-  }
-
-  function flipAndHide(p){
-    return new Promise(resolve=>{
-      // ensure visible
-      p.classList.add("show");
-      void p.offsetWidth; // restart CSS animation
-      p.classList.add("flip");
-
-      setTimeout(()=>{
-        hidePage(p);
-        resolve();
-      }, flipTime+20);
-    });
-  }
+  const pages = [ page1,page2,page3,page4,page5,page6,page7,page8 ];
+  const gateDelay=2500, coverDelay=5000, pageDelay=5000, flipTime=800;
+  function sleep(ms){ return new Promise(res=>setTimeout(res,ms)); }
+  function showPage(p){ p.classList.add("show"); p.classList.remove("flip"); }
+  function hidePage(p){ p.classList.remove("show"); }
+  function flipAndHide(p){ return new Promise(resolve=>{ p.classList.add("show"); void p.offsetWidth; p.classList.add("flip"); setTimeout(()=>{ hidePage(p); resolve(); }, flipTime+20); }); }
 
   async function run(){
-    /* 1. Gate đang hiển thị — chờ 5 giây */
-    await sleep(gateDelay);
-
-    /* 2. Hiện container sách */
-    book.style.opacity = 1;
-
-    /* 3. Trang 1 (cover) */
-    showPage(pages[0]);
-    await sleep(coverDelay);
-    await flipAndHide(pages[0]);
-
-    /* 4. Trang 2–7 */
-    for (let i = 1; i < 7; i++){
-      showPage(pages[i]);
-      await sleep(pageDelay);
-      await flipAndHide(pages[i]);
-    }
-
-    /* 5. Trang 8 — hiển thị nhưng KHÔNG lật */
+    await sleep(gateDelay); book.style.opacity=1; showPage(pages[0]);
+    await sleep(coverDelay); await flipAndHide(pages[0]);
+    for(let i=1;i<7;i++){ showPage(pages[i]); await sleep(pageDelay); await flipAndHide(pages[i]); }
     showPage(pages[7]);
-
-    /* 6. Hiện nút */
-    document.getElementById("enterWrapper").style.display = "block";
+    document.getElementById("enterWrapper").style.display="block";
   }
 
   run();
-
 })();
 </script>
 
