--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="site-header">
     <h1 class="title-main">GIA PHẢ TRƯƠNG VĂN – HIỀN LƯƠNG – AN HỘI</h1>
-    <div class="title-chi">孟 MẠNH CHI 奇</div>
+    <div class="title-chi"> MẠNH CHI </div>
        <button id="btnAdmin" class="btn-admin">⚙️ Admin</button>
   </header>
 
